--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /Lab3-MueblesDeLosAlpes-ejb/build/
+/Lab3-MueblesDeLosAlpes-ejb/dist/
+/build/
+/dist/
+/Lab3-MueblesDeLosAlpes-war/dist/
+/Lab3-MueblesDeLosAlpes-war/build/
