Terminando CMT y BMT de vendedores

--- a/Lab3-MueblesDeLosAlpes-war/web/WEB-INF/web.xml
+++ b/Lab3-MueblesDeLosAlpes-war/web/WEB-INF/web.xml
@@ -11,10 +11,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
     <session-config>
@@ -23,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/index.jsf</welcome-file>
+        <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
 </web-app>
